<resources>
    <string name="app_name">MRUV</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Proyecto Fisica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kelvyn Magzul</string>
    <string name="nav_header_subtitle">1990-17-15406</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mru">MRU</string>
    <string name="mruv">MRUV</string>
    <string name="acerca_de">Acerca de</string>
    <string name="info">Información</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distancia">Distancia</string>
    <string name="velocidad">Velocidad</string>
    <string name="tiempo">Tiempo</string>
    <string name="aceleracion">Aceleración</string>
    <string name="velocidad_inicial">Velocidad Inicial</string>
    <string name="velocidad_final">Velocidad Final</string>
    <string name="calcular">Calcular</string>
</resources>
