<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_mru"
                android:icon="@drawable/ic_menu_move"
                android:title="@string/mru"/>
        <item
                android:id="@+id/nav_mruv"
                android:icon="@drawable/ic_menu_move"
                android:title="@string/mruv"/>
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_info"
                    android:title="@string/acerca_de"/>
        </menu>
    </item>

</menu>
