<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".views.fragment.MruvFragment">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="5dp">
        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp">
                    <EditText
                            android:id="@+id/etVelocidadI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/velocidad_inicial"
                            android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp">
                    <EditText
                            android:id="@+id/etVelocidadF"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/velocidad_final"
                            android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp">
                    <EditText
                            android:id="@+id/etDistancia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/distancia"
                            android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp">
                    <EditText
                            android:id="@+id/etTiempo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tiempo"
                            android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp">
                    <EditText
                            android:id="@+id/etAceleracion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/aceleracion"
                            android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnCalcular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/calcular"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v7.widget.CardView>

</FrameLayout>